--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,10 +1,36 @@
 {% extends "base.html" %}
 
+{% block navigation %}
+<nav class="navbar navbar-default nawigacja-app navbar-fixed-top" role="navigation" id="slide-nav">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="/"><img src="/static/img/logo-landing.png"
+                                                              class="img-responsive"/></a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a class="btn btn-group" href="{{API_URL}}/authentication/logout">
+                    Wyloguj się
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+{% end %}
+
 {% block main %}
-<section id="usos">
+<section class="welcome">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 naglowek-h2">
+            <div class="col-sm-12 text-center">
                 <h2>Aby móc pracować w <span>Kujonie</span> wybierz uczelnię w której masz założone konto USOS,
                     przekierujemy Cię abyś się zalogował.</h2>
 
@@ -20,12 +46,14 @@
 				</div>
 			</div>
 			-->
+
             {% for usos in usoses %}
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <div class="border-logo-cykle col-sm-12 text-center">
                     <img src="{{ usos['logo'] }}" class="img-responsive logo-uczelni">
-                    <p><a href="{{API_URL}}/authentication/register?usos_id={{ usos['usos_id'] }}">{{ usos['name']
-                        }}</a></p>
+                    <p><a href="{{API_URL}}/authentication/register?usos_id={{ usos['usos_id'] }}">
+                        {{ usos['name'] }}
+                    </a></p>
                 </div>
             </div>
 
