--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-{% block navigation %}
+{% extends "base.html" %} {% block navigation %}
 <nav class="navbar navbar-fixed-top navigacja navbar-landing" role="navigation" id="slide-nav">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -31,9 +29,7 @@
         </div>
     </div>
 </nav>
-{% end %}
-
-{% block main %}
+{% end %} {% block main %}
 <div id="page-content" class="landing-page">
     <header>
         <div class="container">
@@ -42,8 +38,7 @@
                     <div class="intro-header">
                         <h1>Komunikacja studencka i dane z uczelni <span>w końcu na Twoim telefonie</span></h1>
                         <button class="btn btn-group white logowanie" data-toggle="modal" data-target="#myModal">
-                            Zaloguj
-                            się
+                            Zaloguj się
                         </button>
                     </div>
                     <div class="img-header">
@@ -63,16 +58,18 @@
                     <div class="col-xs-12 text-center download">
                         <div class="col-xs-12 col-md-6 col-md-offset-3 text-right">
                             <div class="col-xs-6">
-                                <a href="https://play.google.com/store/apps"><img src="/static/img/google_play.png" class=""/></a>
+                                <a href="https://play.google.com/store/apps"><img src="/static/img/google_play.png"
+                                                                                  class=""/></a>
                             </div>
                             <div class="col-xs-6 text-left">
-                                <a href="https://itunes.apple.com/pl/app/"><img src="/static/img/app_store.png" class=""/></a>
+                                <a href="https://itunes.apple.com/pl/app/"><img src="/static/img/app_store.png"
+                                                                                class=""/></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-12 text-center log-overview">
-                        <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#myModal">Zaloguj się</a>
-                            do wersji webowej</p>
+                        <p>lub <a href="#" class="blue " data-toggle="modal" data-target="#myModal">Zaloguj się</a> do
+                            wersji webowej</p>
                     </div>
                 </div>
             </div>
@@ -87,37 +84,38 @@
                 <div class="col-sm-12 demo-col">
                     <div class="col-sm-4">
                         <h3><i class="fa fa-users"></i>Integracja z uczelnią</h3>
-                        <p>Kujon jest połączony z największymi uczelniami w kraju które korzytają z
-                            <a href="http://https://www.usos.edu.pl/" target="_blank">USOSa</a>. Obecnie jest ponad
-                            25 uczelni wyższych z którymi integrujemy się więc jeżeli korzystasz z USOSa na swojej
-                            uczelni - powinieneś móc korzystać z Kujona.</p>
+                        <p>Kujon jest połączony z największymi uczelniami w kraju, które korzytają z
+                            <a href="http://https://www.usos.edu.pl/" target="_blank">USOS-a</a>. Jeśli korzystasz z
+                            USOS-a na swojej uczelni, to możesz korzystać z Kujon-a, gdyż integrujemy się z ponad 25
+                            uczelniami wyższymi.</p>
                     </div>
                     <div class="col-sm-4">
                         <h3><i class="fa fa-share-alt"></i>Moje dane na uczelni</h3>
-                        <p>Dzięki połączeniu Kujona z Twoją uczelnią możesz przeglądać Swój plan zajęć, oceny, informacje
-                        związane z przedmiotem warunkami zaliczenia przedmiotu czy niezbędną bibliografią. </p>
+                        <p>Dzięki połączeniu Kujona z Twoją uczelnią możesz przeglądać Swój plan zajęć, oceny,
+                            informacje związane z przedmiotem, warunkami zaliczenia przedmiotu czy niezbędną
+                            bibliografią.</p>
                     </div>
                     <div class="col-sm-4">
                         <h3><i class="fa fa-briefcase"></i>Powiadomienia o ocenach</h3>
-                        <p>Jak twój wykładoca wystawi Ci ocenę i wpisze ją do uczelnianego systemu - od razu dostaniesz
-                        powiadomienie na komórkę o ocenie ze sprawdzianu czy egzaminu. </p>
+                        <p>Jak twój wykładoca wystawi Ci ocenę i wpisze ją do uczelnianego systemu - od razu zostaniesz
+                            o tym powiadomiony. Damy Ci znać o ocenie ze sprawdzianu czy egzaminu.</p>
                     </div>
                 </div>
                 <div class="col-sm-12 demo-col">
                     <div class="col-sm-4">
-                        <h3><i class="fa fa-university"></i>Katalog i wyszukiwarka </h3>
-                        <p>Dzięki dostępnym w wyszukiwarkom możesz znaleźć wszystkie osoby studiujące na uczelni,
-                        pracowników a także dane dotrzeć do danych każdego wydziału.</p>
+                        <h3><i class="fa fa-university"></i>Katalog i wyszukiwarka</h3>
+                        <p>Dzięki dostępnym w Kujon wyszukiwarkom możesz znaleźć wszystkie osoby studiujące na uczelni,
+                            pracowników a także dane dotrzeć do danych każdego wydziału.</p>
                     </div>
                     <div class="col-sm-4">
                         <h3><i class="glyphicon glyphicon-hand-right"></i>Aplikacje na Android i iOS</h3>
-                        <p>Kujon jest dostępnu poprzez WWW, ale przede wszystkim jest to aplikacje mobilna działająca
-                        na platformie Android i iOS, którą można ściągnąć ze sklepu Google Play i Apple Appstore.</p>
+                        <p>Kujon jest dostępnu poprzez WWW, ale przede wszystkim jest to aplikacje mobilna działająca na
+                            platformie Android i iOS, którą można ściągnąć ze sklepu Google Play i Apple Appstore.</p>
                     </div>
                     <div class="col-sm-4">
                         <h3><i class="fa fa-globe"></i>Portale społecznościowe</h3>
-                        <p>Integrujemy się z Facebookiem aby dla Ciebie była dostępna wymiana informacji poprzez grupy
-                        Facebooka lub Messengera. </p>
+                        <p>Dla Ciebie integrujemy się z Facebookiem, dzięki czemu możesz wymieniać informację poprzez
+                            grupy Facebooka lub Messengera.</p>
                     </div>
                 </div>
             </div>
@@ -156,36 +154,34 @@
                 <div class="modal-body">
                     <div class="col-sm-12 col-xs-12">
                         <p>Logowanie tylko przy użyciu konta:</p>
-                </div>
+                    </div>
                     <div class="col-sm-12 col-xs-12">
                         <a href="{{API_URL}}/authentication/facebook" type="button"
                            class="btn btn-primary btn-lg btn-block">Zaloguj się przez <span>Facebook</span></a>
-                </div>
+                    </div>
                     <div class="col-sm-12 col-xs-12">
                         <div class="col-sm-5 col-xs-5 hr-left">
                             <hr/>
-                    </div>
+                        </div>
                         <div class="col-sm-2 col-xs-2 text-center">
                             <span>lub</span>
-                    </div>
+                        </div>
                         <div class="col-sm-5 col-xs-5 hr-right">
                             <hr/>
+                        </div>
                     </div>
-                </div>
                     <div class="col-sm-12 col-xs-12">
                         <a href="{{API_URL}}/authentication/google" type="button"
                            class="btn btn-danger btn-lg btn-block">Zaloguj się przez <span>Google+</span></a>
                     </div>
-            </div>
+                </div>
             </div>
         </div>
     </div>
 
 </div>
 
-{% end %}
-
-{% block footer_js %}
+{% end %} {% block footer_js %}
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
@@ -196,7 +192,6 @@
 <script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script type="text/javascript">
-
     $.cookieBar({
         fixed: true,
         message: '<span>Ta strona używa ciasteczek (cookies), dzięki którym nasz serwis może działać lepiej.</span> ',
@@ -232,8 +227,6 @@
             $(".navbar-fixed-top").removeClass("top-nav-collapse");
         }
     });
-
-
 </script>
 
 {% end %}
